[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dust-sdk"
version = "0.1.0"
description = "Unofficial Python SDK for the Dust API"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]